--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2"
   }
 }
